--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "mock":"node server.js",
+    "mock": "node mock/server.js",
     "build:test": "node build/build.js",
     "build:prod": "node build/build.js",
     "build:report": "npm_config_report=true npm run build",
@@ -52,17 +52,18 @@
     "eslint-loader": "2.0.0",
     "eslint-plugin-vue": "4.7.1",
     "eventsource-polyfill": "0.9.6",
+    "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "1.1.11",
     "friendly-errors-webpack-plugin": "1.7.0",
     "html-webpack-plugin": "4.0.0-alpha",
+    "json-server": "^0.16.1",
     "mini-css-extract-plugin": "0.4.1",
+    "mockjs": "^1.0.1-beta3",
     "node-notifier": "5.2.1",
     "node-sass": "^4.10.0",
     "optimize-css-assets-webpack-plugin": "5.0.0",
     "ora": "3.0.0",
-    "express": "^4.16.4",
-    "mockjs": "^1.0.1-beta3",
     "path-to-regexp": "2.4.0",
     "portfinder": "1.0.16",
     "postcss-import": "12.0.0",
